--- a/main/assets/scss/custom.scss
+++ b/main/assets/scss/custom.scss
@@ -4,8 +4,8 @@
 
 
 $theme-colors: (
-  "primary": #c5966f,
-  "secondary": #87b688
+  "primary": #8B5E3C,
+  "secondary": #58764C
 );
 
 $custom-colors:(
