--- a/main/assets/css/main.css
+++ b/main/assets/css/main.css
@@ -122,7 +122,7 @@ a:focus {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    background-color: #222831;
+    background-color: #2c1e12;
 }
 
 .bg-box {
@@ -268,7 +268,7 @@ a:focus {
 }
 
 .user_option .btn-auth:hover {
-    background-color: #e69c00;
+    background-color: #c5966f;
 }
 
 .btn-auth {
@@ -283,7 +283,7 @@ a:focus {
 }
 
 .btn-auth:hover {
-    background-color: #e69c00;
+    background-color: #c5966f;
 }
 
 .custom_nav-container .navbar-toggler {
@@ -360,6 +360,7 @@ a:focus {
     align-items: center;
     position: relative;
     padding: 45px 0 75px 0;
+    height: 50vh;
 }
 
 .slider_section .row {
@@ -421,19 +422,20 @@ a:focus {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    list-style-type: none;
 }
 
 .slider_section .carousel-indicators li {
     background-color: #ffffff;
-    width: 12px;
-    height: 12px;
-    border-radius: 100%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
     opacity: 1;
 }
 
 .slider_section .carousel-indicators li.active {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: #d2aa8b;
 }
 
@@ -442,7 +444,7 @@ a:focus {
     margin: 0 auto;
     width: 3.75rem;
     height: 3.75rem;
-    background: #222831;
+    background: #2c1e12;
     transition: all ease-in-out 0.5s;
     border-radius: 3.125rem;
 }
@@ -479,17 +481,17 @@ a:focus {
 }
 
 .food_section .filters_menu li.active {
-    background-color: #222831;
+    background-color: #2c1e12;
     color: #ffffff;
 }
 
 .food_section .filters_menu li.active a {
-    background-color: #222831;
+    background-color: #2c1e12;
     color: #ffffff;
 }
 
 .food_section .filters_menu li a {
-    color: #222831;
+    color: #2c1e12;
 }
 
 .food_section .box {
@@ -500,11 +502,11 @@ a:focus {
     color: #ffffff;
     border-radius: 15px;
     overflow: hidden;
-    background: linear-gradient(to bottom, #f1f2f3 25px, #222831 25px);
+    background: linear-gradient(to bottom, #f1f2f3 25px, #2c1e12 25px);
 }
 
 .food_section .box .img-box {
-    background-color: #222831;
+    background-color: #2c1e12;
     height: 185px;
 }
 
@@ -518,7 +520,7 @@ a:focus {
 
 .food_section .box .detail-box {
     padding: 25px;
-    background-color: #222831;
+    background-color: #2c1e12;
 }
 
 .food_section .box .detail-box h5 {
@@ -610,7 +612,7 @@ a:focus {
 }
 
 .about_section {
-    background: #222831;
+    background: #2c1e12;
     color: #ffffff;
 }
 
@@ -715,7 +717,7 @@ a:focus {
 }
 
 .book_section .form_container button:hover {
-    background-color: #e69c00;
+    background-color: #c5966f;
 }
 
 .book_section .map_container {
@@ -782,7 +784,7 @@ a:focus {
 }
 
 .client_section .box .detail-box {
-    background-color: #222831;
+    background-color: #2c1e12;
     color: #ffffff;
     padding: 25px 25px 15px 25px;
     border-radius: 5px;
@@ -890,12 +892,12 @@ a:focus {
 }
 
 .contact_section .form_container button:hover {
-    background-color: #e69c00;
+    background-color: #c5966f;
 }
 
 /* footer section*/
 .footer_section {
-    background-color: #222831;
+    background-color: #2c1e12;
     color: #ffffff;
     padding: 75px 0 40px 0;
     text-align: center;
@@ -974,7 +976,7 @@ a:focus {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    color: #222831;
+    color: #2c1e12;
     width: 30px;
     height: 30px;
     border-radius: 100%;
@@ -1004,23 +1006,23 @@ a:focus {
 
 .input-group-text {
     color: #fff;
-    background-color: #222831;
-    border: 1px solid #222831;
+    background-color: #2c1e12;
+    border: 1px solid #2c1e12;
 }
 
 .input-group .input-group-text:hover {
     color: #fff;
-    background-color: #222831;
+    background-color: #2c1e12;
 }
 
 .input-group .input-group-text:focus {
     color: #fff;
-    background-color: #222831;
+    background-color: #2c1e12;
 }
 
 .form-check-input:checked {
-    background-color: #222831;
-    border-color: #222831;
+    background-color: #2c1e12;
+    border-color: #2c1e12;
 }
 
 .form-check-input:focus {
@@ -1028,26 +1030,26 @@ a:focus {
 }
 
 .page-link {
-    color: #222831;
+    color: #2c1e12;
 }
 
 .page-item.active .page-link {
     color: #d2aa8b;
-    background-color: #222831;
-    border-color: #222831;
+    background-color: #2c1e12;
+    border-color: #2c1e12;
 }
 
 .page-link:hover {
-    color: #222831;
+    color: #2c1e12;
 }
 
 .page-link:focus {
-    color: #222831;
+    color: #2c1e12;
     box-shadow: 0 0 0 0.25rem rgb(31 33 37 / 25%);
 }
 
 .form-select:focus {
-    border-color: #222831;
+    border-color: #2c1e12;
     box-shadow: 0 0 0 0.25rem rgb(51 52 54 / 25%);
 }
 
@@ -1067,7 +1069,7 @@ a:focus {
 }
 
 .btn:hover {
-    background-color: #e69c00;
+    background-color: #c5966f;
 }
 
 .btn-primary {
@@ -1079,8 +1081,8 @@ a:focus {
 .btn-dark,
 .btn-kark:hover {
     color: #fff;
-    background-color: #222831 !important;
-    border-color: #222831 !important;
+    background-color: #2c1e12 !important;
+    border-color: #2c1e12 !important;
 }
 
 .btn-primary.disabled,
@@ -1098,7 +1100,7 @@ a:focus {
 }
 
 .form-control:focus {
-    border-color: #222831;
+    border-color: #2c1e12;
     box-shadow: 0 0 0 0.25rem rgb(51 52 54 / 25%);
 }
 
@@ -1106,6 +1108,15 @@ a:focus {
     border-radius: 20px;
     position: relative;
 }
+.carousel-item {
+    opacity: 0;
+    transition: opacity 0.6s ease-in-out;
+  }
+  
+  .carousel-item.active {
+    opacity: 1;
+  }
+  
 
 .single_page_section .btn-add {
     display: inline-block;
@@ -1174,7 +1185,7 @@ a:focus {
 
 .input-counter .input-number {
     height: 45px;
-    color: #222831;
+    color: #2c1e12;
     outline: 0;
     display: block;
     border: none;
@@ -1196,7 +1207,7 @@ a:focus {
 }
 
 .profile_section .list-group .list-group-item a {
-    color: #222831;
+    color: #2c1e12;
 }
 
 .cart-loadnig,
